--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,10 +7,19 @@
     <%= csp_meta_tag %>
 
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <%= javascript_pack_tag 'application' %>
+
+    
+
+
   </head>
 
   <body>
-    <%= yield %>
-  </body>
+  <header>
+    <h3>スケジュール管理アプリ</h3>
+  </header>
+  <%= yield %>
+  <footer>
+  </footer>
+</body>
 </html>
