--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -1,54 +1,52 @@
-// Place all the styles related to the posts controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: https://sass-lang.com/
-
 .menu {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin: 20px ;
-  }
-  
-  .menu h2 {
-    margin: 0; /* デフォルトのマージンを削除 */
-  }
-  
-  .menu a {
-    text-decoration: none;
-    padding: 5px 10px;
-    border: 1px solid #ddd;
-    border-radius: 5px;
-    color: #333;
-  }
-  
-  .menu a:hover {
-    background-color: #f2f2f2;
-  }
-  
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 20px;
+}
+
+.menu h2 {
+  margin: 0;
+}
+
+.menu a {
+  text-decoration: none;
+  padding: 5px 10px;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+  color: #333;
+}
+
+.menu a:hover {
+  background-color: #f2f2f2;
+}
 
 .Table {
-    width: 100%;
-    border-collapse: collapse; /* ボーダーの重なりを避ける */
-  }
-  
-  .Table th, .Table td {
-    padding: 10px;
-    text-align: center;
-    border: 1px solid #ddd;
-  }
-  
-  .Table th {
-    background-color: #f2f2f2;
-  }
-  
-  .FooterBody {
-    display: flex;
-    justify-content: space-between;
-    padding: 24px;
+  width: 100%;
+  border-collapse: collapse;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
-  
-/*新規登録ページ*/
+
+.Table th, .Table td {
+  padding: 10px;
+  text-align: center;
+  border: 1px solid #ddd;
+}
+
+.Table th {
+  background-color: #f2f2f2;
+}
+
+.FooterBody {
+  display: flex;
+  justify-content: space-between;
+  padding: 24px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+/* 新規登録ページ 編集ページ */
 h2.center-heading {
+  padding-top: 15px;
   text-align: center;
 }
 
@@ -56,6 +54,7 @@ table {
   width: 70%;
   margin: 20px auto;
   border-collapse: collapse;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
 th, td {
@@ -104,4 +103,6 @@ li {
   margin-right: 10px;
 }
 
-
+.card-body {
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
