--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -6,17 +6,31 @@
   <table>
     <tr>
       <th><%= f.label :title, "タイトル" %></th>
-      <td><%= f.text_field :title, class: "title-textarea" %></td>
+      <td><%= f.text_field :title, class: "title-textarea", placeholder: "タイトルを入力してください" %></td>
     </tr>
 
     <tr>
       <th><%= f.label :start_at, "開始日" %></th>
-      <td><%= f.text_field :start_at, class: "datepicker" %></td>
+      <td>
+        <div class="input-group date">
+          <%= f.text_field :start_at, class: "form-control datepicker", placeholder: "選択してください" %>
+          <div class="input-group-addon">
+            <span class="glyphicon glyphicon-th"></span>
+          </div>
+        </div>
+      </td>
     </tr>
-    
+
     <tr>
       <th><%= f.label :end_at, "終了日" %></th>
-      <td><%= f.text_field :end_at, class: "datepicker" %></td>
+      <td>
+        <div class="input-group date">
+          <%= f.text_field :end_at, class: "form-control datepicker", placeholder: "選択してください" %>
+          <div class="input-group-addon">
+            <span class="glyphicon glyphicon-th"></span>
+          </div>
+        </div>
+      </td>
     </tr>
 
     <tr>
@@ -26,14 +40,14 @@
 
     <tr>
       <th><%= f.label :memo, "スケジュールメモ" %></th>
-      <td><%= f.text_area :memo, class: "large-textarea" %></td>
+      <td><%= f.text_area :memo, class: "large-textarea", placeholder: "メモを入力してください"%></td>
     </tr>
   </table>
 
   <div>
     <ul>
-      <li><%= f.submit "更新する" %></li>
-      <li><%= link_to "スケジュール一覧に戻る", :posts %></li>
+      <li><%= f.submit "更新する", class: "btn btn-light" %></li>
+      <li><%= link_to "スケジュール一覧に戻る", :posts, class: "btn btn-light" %></li>
     </ul>
   </div>
 <% end %>
